--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,7 @@ body {
 h1, nav, nav a {
   display: inline-flex;
   margin: 10px;
+  color: white;
 }
 
 h1 {
@@ -67,6 +68,7 @@ h2 {
   border-radius: 3px;
   margin: 10px;
   padding: 10px;
+  height: 425px;
 }
 
 .image {
@@ -79,4 +81,26 @@ h2 {
 
 .textContent {
   margin: 15px;
+  display: block;
+}
+
+.flex-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.flex-column {
+  display: flex;
+  flex-basis: 50%;
+  flex-grow: 1;
+}
+
+.linkStyle {
+  color: black;
+  float: right;
+}
+
+h3 {
+  display: inline;
+  margin-bottom: 5px;
 }
