--- a/src/App.css
+++ b/src/App.css
@@ -70,8 +70,15 @@ nav {
 }
 
 #skills i {
+  display: inline-block;
   margin: 50px;
+  margin-bottom: 0px;
+  margin-top: 15px;
   font-size: 5em;
+}
+
+.lightBlue {
+  color: #00A7F7;
 }
 
 #projects {
@@ -131,11 +138,23 @@ h3 {
 }
 
 footer {
-
   height: 8em;
   background-color: #151515;
   color: #F4F4F4;
+  display: flex;
+  flex-wrap: wrap;
+
 }
+
+footer a {
+  color: white;
+  margin: 10px;
+}
+
+footer a:hover {
+  color: #f4f4f4;
+}
+
 
 @media screen and (min-width: 987px) {
   .flex-column {
