--- a/src/App.css
+++ b/src/App.css
@@ -20,17 +20,18 @@ a:hover {
 
 h1, nav, nav a {
   display: inline-flex;
-  margin: 15px;
+  margin: 7px;
   margin-top: 10px;
   color: white;
 }
 
 h1 {
   float: left;
-  font-size: 2.1em;
+  font-size: 1.8em;
   margin-left: 2%;
   font-weight: 200;
   margin-top: 15px;
+  margin-right: 0;
 }
 
 nav {
@@ -45,12 +46,10 @@ nav i:hover, .arrowContainer i:hover{
 }
 
 .aboutTextContainer {
-  margin-top: 34%;
+  line-height: 130vh;
   margin-left: 2%;
   position: absolute;
-  height: 100px;
-  width: 50%;
-  font-size: 1.8em;
+  font-size: 0.9em;
 }
 
 .aboutTextContainer p {
@@ -83,8 +82,9 @@ h2 {
   background-color: white;
   border-color: #dfdfdf;
   border-radius: 3px;
-  margin: 10px;
-  padding: 10px;
+  padding: 5px;
+  margin-top: 10px;
+  margin-bottom: 10px;
   height: 100%;
 }
 
@@ -107,6 +107,7 @@ h2 {
 .flex-container {
   display: flex;
   flex-wrap: wrap;
+  padding: 0px;
 }
 
 .flex-column {
@@ -137,19 +138,50 @@ h3 {
 
 #skills i {
   display: inline-block;
-  margin: 50px;
   margin-bottom: 0px;
   margin-top: 15px;
   font-size: 5em;
+}
+
+.skillIconDiv {
+  width: 135px;
 }
 
 .lightBlue {
   color: #00A7F7;
 }
 
+@media screen and (min-width: 420px) {
+  .aboutTextContainer {
+    font-size: 1.2em;
+  }
+}
+
+@media screen and (min-width: 630px) {
+  .aboutTextContainer {
+    font-size: 1.8em;
+  }
+}
 
 @media screen and (min-width: 987px) {
   .flex-column {
     flex-basis: 50%;
+  }
+
+  h1, nav, nav a {
+  margin: 15px;
+  }
+
+  h1 {
+    font-size: 2.1em;
+  }
+
+  .aboutTextContainer {
+    font-size: 1.8em;
+  }
+
+  .content {
+    margin: 10px;
+    padding: 10px;
   }
 }
